--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <input type="text" id="item-id" placeholder="Enter Item ID" />
     <button onclick="searchItem()">Search</button>
 
-    <div id="item-details" style="margin-top: 20px;"></div>
+    <div id="item-details" style="margin-top: 20px;display: grid;grid-template-columns: repeat(2, 1fr);"></div>
 
     <button id="save-btn" onclick="saveItem()" style="display:none; margin-top: 10px;">Save Changes</button>
 </body>
