--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,9 @@
         margin: 50px;
       }
 
-   
+     h2{
+        color: white;
+     }
   
     button {
         padding: 8px 16px;
@@ -27,6 +29,7 @@
 
     #item-details {
       margin-top: 20px;
+      color: white;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 16px;
