--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 
     #item-details {
       margin-top: 20px;
-      color: black;
+      color: blue;
      
       /* No grid here, sections will each have their own grid */
     }
