--- a/templates/index.html
+++ b/templates/index.html
@@ -86,10 +86,10 @@
 <body>
   <h2>Search and Edit Item</h2>
 
-  <div>
+  <!-- <div>
     <input type="text" id="item-id" placeholder="Enter Item ID" />
     <button onclick="searchItem()">Search</button>
-  </div>
+  </div> -->
 
   <div id="item-details"></div>
 
