--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
   </style>
 </head>
 <body>
-  <h2>View and Edit Item</h2>
+  <h2>View and Edit Item 1</h2>
 
   <!-- <div>
     <input type="text" id="item-id" placeholder="Enter Item ID" />
